# stm32f0-cmake-cpp-template

./: CMakeLists.txt  README.md
cmake/: binary_targets.cmake  toolchain.cmake
firmware/: CMakeLists.txt  stm32f0xx_conf.h
src/: CMakeLists.txt
